2006-10-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalInlineAptView.m ([UIxCalInlineAptView
	-displayStyle]): new method that returns a string containing the
	css style relative to the current appointment cell. This code is
	currently inactive but might be reused later.

	* UI/WebServerResources/SchedulerUI.js: added code to handle the
	display of the selected day (the day pointed by the mouse, or the
	current day when changing the view).

	* UI/Scheduler/UIxCalDayTable.m ([UIxCalDayTable
	-dayCellClasses]): new method that returns a string containing the
	css classes applicable to the current cell, depending on the
	position of the day in the week, the day of today and the
	requested day.

	* UI/Scheduler/UIxCalCalendarsListView.m ([UIxCalCalendarsListView
	-currentContactAptBorder]): new method that returns the
	appropriate border color for the specified user.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject
	-saveContentString:contentStringbaseVersion:baseVersion]):
	overloaded method that parse new events and detects if they have
	an organizer or not. If they are new and have no organizer set
	(Sunbird/Lightning...), the owner of the event is set as
	organizer.

	* SoObjects/Appointments/iCalEntityObject+Agenor.[hm]: new
	category that provides facility methods and interfaces to the
	AgenorUserManager.

	* SoObjects/Contacts/product.plist: give full access to ANY
	authenticated user, not just the owner (to every objects...).

2006-10-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/UIxFreeBusyUserSelector.js: make sure
	every replica widgets are declared as such to their master
	counterpart. Take the days into account when displaying the time
	range taken by the appointment.

	* UI/Scheduler/UIxComponent+Agenor.m ([UIxComponent
	-getICalPersonsFromValue:selectorValue]): method taken from
	UIxFreeBusyUserSelector, that is shared both by